# relik

./: README.md  pyproject.toml
relik/reader/pytorch_modules/: span.py  triplet.py
relik/reader/pytorch_modules/hf/: modeling_relik.py
