[tool.poetry]
name = "relik"
version = "1.0.8"
description = "Fast and Accurate Entity Linking and Relation Extraction on an Academic Budget"
authors = [
    "Edoardo Barba <orlandorcc@gmail.com>",
    "Riccardo Orlando",
    "Pere-Lluís Huguet Cabot",
]
readme = "README.md"
license = "Apache"
homepage = "https://github.com/SapienzaNLP/relik"
keywords = [
    "NLP",
    "Sapienza",
    "budget",
    "deep",
    "entity",
    "extraction",
    "learning",
    "linking",
    "pytorch",
    "reader",
    "relation",
    "retriever",
    "sapienzanlp",
    "transformer",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
art = "^6.3"
colorama = "^0.4.6"
datasets = "^3.1.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
lightning = "^2.4.0"
rich = "^13.9.4"
scikit-learn = "^1.5.2"
termcolor = "^2.5.0"
transformers = { extras = ["sentencepiece"], version = "^4.46.3" }
typer = "^0.13.1"
wandb = "^0.18.7"


[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.10.0" }
isort = "^5.13.2"
pre-commit = "^4.0.1"


[tool.poetry.group.ray.dependencies]
fastapi = "^0.115.5"
gradio = "^5.6.0"
gunicorn = "^23.0.0"
pyvis = "^0.3.2"
ray = { extras = ["serve"], version = "^2.39.0" }
streamlit = "^1.40.1"
streamlit-extras = "^0.5.0"
uvicorn = { extras = ["standart"], version = "^0.32.1" }


[tool.poetry.group.serve.dependencies]
fastapi = "^0.115.5"
gradio = "^5.6.0"
gunicorn = "^23.0.0"
pyvis = "^0.3.2"
streamlit = "^1.40.1"
streamlit-extras = "^0.5.0"
uvicorn = { extras = ["standart"], version = "^0.32.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
